--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,8 @@ section h2 {
     width: 49%;
     display: inline-block;
     border-radius: 20px;
+    position: relative;
+    bottom: 50px;
   }
   aside div {
     display: inline-block;
